@@ -5,10 +5,13 @@
 2011-11-13	pwessel
 	* gmt_grdio.c:		Need to reset zmin/zmax when region was temporarily expanded to
 				include data boundary rows/cols.
+	* grdinfo.c:		Modifier -Ts<dz> returns a symmetrical range about zero.
 				
 2011-11-12	pwessel
 	* gmtmercmap.c:		New example of API use: Create a shaded-relief Mercator map using
-				Etopo 1|2|5m global relief, with optional colorbar.
+				Etopo 1|2|5m global relief, with optional color bar.  Option -D
+				makes no map but writes equivalent shell script.
+
 	* gmt_support.c:	Resampling of CPTs did not initialize the i_dz variables, resulting
 				in discontinuous colors for continuous color maps.
 
